fix docs and datetime serialization

--- a/docs/practical_examples/metadata4ing.ipynb
+++ b/docs/practical_examples/metadata4ing.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "The *h5RDMtoolbox* allows translating JSON-LD data into the HDF5 structure and wise versa (see [here](../userguide/wrapper/FAIRAttributes.ipynb)). This way, engineering process metadata can be added easily to the HDF5 file. \n",
     "\n",
-    "Consider the following example file taken from the *m4i* ontology [\"first steps guide\"](https://git.rwth-aachen.de/nfdi4ing/metadata4ing/metadata4ing/-/blob/1.2.1/training/first-steps-guide.md), which describes an experimental investigation. You can find the full content of the JSON-LD file [here](min_m4i_ex.jsonld), the following shows an excerpt:"
+    "Consider the following example file taken from the *m4i* ontology [\"first steps guide\"](https://git.rwth-aachen.de/nfdi4ing/metadata4ing/metadata4ing/-/blob/1.3.1/training/first-steps-guide.md), which describes an experimental investigation. You can find the full content of the JSON-LD file [here](min_m4i_ex.jsonld), the following shows an excerpt:"
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b11673a2-beae-4f8b-b038-674f92a75f89",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "04c5502d-480f-45cd-804f-6afa50aedafd",
    "metadata": {},
    "outputs": [],
@@ -71,26 +71,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c7e498ce-e029-499c-8b39-13751da18f5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@prefix dcterms: <http://purl.org/dc/terms/> .\n",
+      "@prefix foaf: <http://xmlns.com/foaf/0.1/> .\n",
+      "@prefix m4i: <http://w3id.org/nfdi4ing/metadata4ing#> .\n",
+      "@prefix ns1: <http://purl.obolibrary.org/obo/> .\n",
+      "@prefix prov: <http://www.w3.org/ns/prov#> .\n",
+      "@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .\n",
+      "@prefix schema: <https://schema.org/> .\n",
+      "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/FineTec%20FORE%20180.01C%20TT> schema:about <https://local-domain.org/xray_source_finetec_180.01ctt_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Image%20Processing%20and%20Reconstruction> schema:about <https://local-domain.org/reconstruction_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Post%20Processing> schema:about <https://local-domain.org/postprocessing_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Sample%20preparation%20and%20parameter%20definition> schema:about <https://local-domain.org/preparation_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Standard%20cone%20beam%20scanning> schema:about <https://local-domain.org/cone_beam_scanning> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Standard%20cone%20beam%20scanning/has%20parameter> m4i:hasParameter <https://local-domain.org/xray_tube_voltage> ;\n",
+      "    schema:about <https://local-domain.org/xray_tube_voltage> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/XRCT-Scan> schema:about <https://local-domain.org/xrctscan_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/file%20set> schema:about <https://local-domain.org/output/xrct-data> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/person> schema:about <https://local-domain.org/alex> .\n",
+      "\n",
+      "<https://local-domain.org/postprocessing_0001> a m4i:ProcessingStep ;\n",
+      "    rdfs:label \"Post Processing\" .\n",
+      "\n",
+      "<https://local-domain.org/preparation_0001> a m4i:ProcessingStep ;\n",
+      "    rdfs:label \"Sample preparation and parameter definition\" ;\n",
+      "    prov:wasAssociatedWith <https://local-domain.org/alex> ;\n",
+      "    schema:startTime \"2025-10-22T00:00:00\"^^xsd:dateTime .\n",
+      "\n",
+      "<https://local-domain.org/reconstruction_0001> a m4i:ProcessingStep ;\n",
+      "    rdfs:label \"Image Processing and Reconstruction\" ;\n",
+      "    ns1:RO_0002233 <https://local-domain.org/xrct_data_0001> .\n",
+      "\n",
+      "<https://local-domain.org/xrctscan_0001> a m4i:ProcessingStep ;\n",
+      "    rdfs:label \"XRCT-Scan\" ;\n",
+      "    ns1:RO_0002234 <https://local-domain.org/output/xrct-data> ;\n",
+      "    m4i:hasEmployedTool <https://local-domain.org/xray_source_finetec_180.01ctt_0001> ;\n",
+      "    m4i:investigates <https://www.wikidata.org/wiki/Q189259> ;\n",
+      "    m4i:investigatesProperty <https://www.wikidata.org/wiki/Q256699> ;\n",
+      "    m4i:realizesMethod <https://local-domain.org/cone_beam_scanning> .\n",
+      "\n",
+      "<https://local-domain.org/alex> a prov:Person ;\n",
+      "    m4i:orcidId \"0000-0000-0123-4567\" ;\n",
+      "    foaf:firstName \"Alexandra\" ;\n",
+      "    foaf:lastName \"Test\" .\n",
+      "\n",
+      "<https://local-domain.org/cone_beam_scanning> a m4i:Method ;\n",
+      "    rdfs:label \"Standard cone beam scanning\" ;\n",
+      "    dcterms:description \"Standard cone beam scanning of the centered sample\" .\n",
+      "\n",
+      "<https://local-domain.org/output/xrct-data> a <http://mlcommons.org/croissant/FileSet> ;\n",
+      "    dcterms:description \"TIFF files in folder output/image-files\" ;\n",
+      "    m4i:includes \"*.tiff\" .\n",
+      "\n",
+      "<https://local-domain.org/xray_source_finetec_180.01ctt_0001> a m4i:Tool ;\n",
+      "    rdfs:label \"FineTec FORE 180.01C TT\" .\n",
+      "\n",
+      "<https://local-domain.org/xray_tube_voltage> a m4i:NumericalVariable ;\n",
+      "    rdfs:label \"X-Ray Tube Voltage\" ;\n",
+      "    m4i:hasKindOfQuantity <http://qudt.org/vocab/quantitykind/ElectricPotential> ;\n",
+      "    m4i:hasNumericalValue \"0140-10-12T00:00:00\"^^xsd:dateTime ;\n",
+      "    m4i:hasUnit <http://qudt.org/vocab/unit/KiloV> .\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "print(h5tbx.serialize(h5.hdf_filename, format=\"ttl\", structural=False))"
+    "print(h5tbx.serialize(h5.hdf_filename, format=\"ttl\", structural=False, file_uri=\"https://local-domain.org/\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f0756149-dc6f-468d-808f-5c8ad88ecae4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@prefix dcterms: <http://purl.org/dc/terms/> .\n",
+      "@prefix foaf: <http://xmlns.com/foaf/0.1/> .\n",
+      "@prefix m4i: <http://w3id.org/nfdi4ing/metadata4ing#> .\n",
+      "@prefix ns1: <http://purl.obolibrary.org/obo/> .\n",
+      "@prefix prov: <http://www.w3.org/ns/prov#> .\n",
+      "@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .\n",
+      "@prefix schema: <https://schema.org/> .\n",
+      "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/FineTec%20FORE%20180.01C%20TT> schema:about <https://local-domain.org/xray_source_finetec_180.01ctt_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Image%20Processing%20and%20Reconstruction> schema:about <https://local-domain.org/reconstruction_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Post%20Processing> schema:about <https://local-domain.org/postprocessing_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Sample%20preparation%20and%20parameter%20definition> schema:about <https://local-domain.org/preparation_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Standard%20cone%20beam%20scanning> schema:about <https://local-domain.org/cone_beam_scanning> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/Standard%20cone%20beam%20scanning/has%20parameter> m4i:hasParameter <https://local-domain.org/xray_tube_voltage> ;\n",
+      "    schema:about <https://local-domain.org/xray_tube_voltage> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/XRCT-Scan> schema:about <https://local-domain.org/xrctscan_0001> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/file%20set> schema:about <https://local-domain.org/output/xrct-data> .\n",
+      "\n",
+      "<https://local-domain.org/#tmp0.hdf/metadata/person> schema:about <https://local-domain.org/alex> .\n",
+      "\n",
+      "<https://local-domain.org/postprocessing_0001> a m4i:ProcessingStep ;\n",
+      "    rdfs:label \"Post Processing\" .\n",
+      "\n",
+      "<https://local-domain.org/preparation_0001> a m4i:ProcessingStep ;\n",
+      "    rdfs:label \"Sample preparation and parameter definition\" ;\n",
+      "    prov:wasAssociatedWith <https://local-domain.org/alex> ;\n",
+      "    schema:startTime \"2025-10-22T00:00:00\"^^xsd:dateTime .\n",
+      "\n",
+      "<https://local-domain.org/reconstruction_0001> a m4i:ProcessingStep ;\n",
+      "    rdfs:label \"Image Processing and Reconstruction\" ;\n",
+      "    ns1:RO_0002233 <https://local-domain.org/xrct_data_0001> .\n",
+      "\n",
+      "<https://local-domain.org/xrctscan_0001> a m4i:ProcessingStep ;\n",
+      "    rdfs:label \"XRCT-Scan\" ;\n",
+      "    ns1:RO_0002234 <https://local-domain.org/output/xrct-data> ;\n",
+      "    m4i:hasEmployedTool <https://local-domain.org/xray_source_finetec_180.01ctt_0001> ;\n",
+      "    m4i:investigates <https://www.wikidata.org/wiki/Q189259> ;\n",
+      "    m4i:investigatesProperty <https://www.wikidata.org/wiki/Q256699> ;\n",
+      "    m4i:realizesMethod <https://local-domain.org/cone_beam_scanning> .\n",
+      "\n",
+      "<https://local-domain.org/alex> a prov:Person ;\n",
+      "    m4i:orcidId \"0000-0000-0123-4567\" ;\n",
+      "    foaf:firstName \"Alexandra\" ;\n",
+      "    foaf:lastName \"Test\" .\n",
+      "\n",
+      "<https://local-domain.org/cone_beam_scanning> a m4i:Method ;\n",
+      "    rdfs:label \"Standard cone beam scanning\" ;\n",
+      "    dcterms:description \"Standard cone beam scanning of the centered sample\" .\n",
+      "\n",
+      "<https://local-domain.org/output/xrct-data> a <http://mlcommons.org/croissant/FileSet> ;\n",
+      "    dcterms:description \"TIFF files in folder output/image-files\" ;\n",
+      "    m4i:includes \"*.tiff\" .\n",
+      "\n",
+      "<https://local-domain.org/xray_source_finetec_180.01ctt_0001> a m4i:Tool ;\n",
+      "    rdfs:label \"FineTec FORE 180.01C TT\" .\n",
+      "\n",
+      "<https://local-domain.org/xray_tube_voltage> a m4i:NumericalVariable ;\n",
+      "    rdfs:label \"X-Ray Tube Voltage\" ;\n",
+      "    m4i:hasKindOfQuantity <http://qudt.org/vocab/quantitykind/ElectricPotential> ;\n",
+      "    m4i:hasNumericalValue \"0140-10-12T00:00:00\"^^xsd:dateTime ;\n",
+      "    m4i:hasUnit <http://qudt.org/vocab/unit/KiloV> .\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\n",
     "    h5tbx.serialize(\n",
     "        h5.hdf_filename,\n",
     "        format=\"ttl\",\n",
     "        structural=False,\n",
+    "        file_uri=\"https://local-domain.org/\",\n",
     "        context={\"@import\": \"https://w3id.org/nfdi4ing/metadata4ing/m4i_context.jsonld\"})\n",
     ")"
    ]
@@ -120,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
