--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -182,8 +182,8 @@
     {
      "data": {
       "text/plain": [
-       "{'tmp0.jsonld': RepositoryFile(tmp0.jsonld),\n",
-       " 'tmp0.hdf': RepositoryFile(tmp0.hdf)}"
+       "{'tmp0.hdf': RepositoryFile(tmp0.hdf),\n",
+       " 'tmp0.jsonld': RepositoryFile(tmp0.jsonld)}"
       ]
      },
      "execution_count": 7,
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "02290359-b13b-413d-9b93-9706b3ab087d",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "4e75f4fc-6311-470c-9204-93c1c5d768d0",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
