--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo.upload_file(filename, metamapper=my_meta_mapper, overwrite=True)"
+    "repo.upload_file(filename, metamapper=my_meta_mapper)"
    ]
   },
   {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "4e75f4fc-6311-470c-9204-93c1c5d768d0",
    "metadata": {},
    "outputs": [
@@ -251,8 +251,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tmp0.hdf\n",
       "tmp0.jsonld\n",
+      "tmp0.hdf\n",
       "tmp0.txt\n"
      ]
     }
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
