allow creating dcat dataset or unpublished records, too

--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -182,8 +182,8 @@
     {
      "data": {
       "text/plain": [
-       "{'tmp0.hdf': RepositoryFile(tmp0.hdf),\n",
-       " 'tmp0.jsonld': RepositoryFile(tmp0.jsonld)}"
+       "{'tmp0.jsonld': RepositoryFile(tmp0.jsonld),\n",
+       " 'tmp0.hdf': RepositoryFile(tmp0.hdf)}"
       ]
      },
      "execution_count": 7,
@@ -263,9 +263,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74e6366b-ceb4-41e7-93de-a564fec6c31b",
+   "metadata": {},
+   "source": [
+    "## Extract a dcat:Dataset\n",
+    "\n",
+    "The Zenodo Interface allows generating Metadata as [dcat:Dataset](https://www.w3.org/TR/vocab-dcat-3/#Class:Dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8a456cd1-0fdc-47c4-b9b8-caa9252b2e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = repo.as_dcat_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "753612b5-dae4-40dd-a21c-6085414e9e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@prefix dcat: <http://www.w3.org/ns/dcat#> .\n",
+      "@prefix dcterms: <http://purl.org/dc/terms/> .\n",
+      "@prefix foaf: <http://xmlns.com/foaf/0.1/> .\n",
+      "@prefix spdx: <http://spdx.org/rdf/terms#> .\n",
+      "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n",
+      "\n",
+      "<https://sandbox.zenodo.org/api/deposit/depositions/395383/files/26131c3d-7e76-4f2e-bda3-02af6cc5ee7c> a dcat:Distribution ;\n",
+      "    dcat:accessURL <https://doi.org/10.5281/zenodo.395383> ;\n",
+      "    dcat:byteSize 89 ;\n",
+      "    dcat:checksum [ a spdx:Checksum ;\n",
+      "            spdx:algorithm \"md5\" ;\n",
+      "            spdx:checksumValue \"bbdab06ec58121fb83e1581cccf5f819\" ] ;\n",
+      "    dcat:downloadURL <https://sandbox.zenodo.org/api/deposit/depositions/395383/files/tmp0.txt/content> ;\n",
+      "    dcat:mediaType \"text/plain\" .\n",
+      "\n",
+      "<https://sandbox.zenodo.org/api/deposit/depositions/395383/files/2fde3a21-ef6b-4c87-892d-8cf81f292992> a dcat:Distribution ;\n",
+      "    dcat:accessURL <https://doi.org/10.5281/zenodo.395383> ;\n",
+      "    dcat:byteSize 6944 ;\n",
+      "    dcat:checksum [ a spdx:Checksum ;\n",
+      "            spdx:algorithm \"md5\" ;\n",
+      "            spdx:checksumValue \"cfcba48edfcdea042e6570e5387caf60\" ] ;\n",
+      "    dcat:downloadURL <https://sandbox.zenodo.org/api/deposit/depositions/395383/files/tmp0.hdf/content> ;\n",
+      "    dcat:mediaType \"application/x-hdf5\" .\n",
+      "\n",
+      "<https://sandbox.zenodo.org/api/deposit/depositions/395383/files/6753162b-948b-4111-8b47-b8bb00a0eff8> a dcat:Distribution ;\n",
+      "    dcat:accessURL <https://doi.org/10.5281/zenodo.395383> ;\n",
+      "    dcat:byteSize 1930 ;\n",
+      "    dcat:checksum [ a spdx:Checksum ;\n",
+      "            spdx:algorithm \"md5\" ;\n",
+      "            spdx:checksumValue \"b7516a17c5513f40a14da1eaa6bd52bf\" ] ;\n",
+      "    dcat:downloadURL <https://sandbox.zenodo.org/api/deposit/depositions/395383/files/tmp0.jsonld/content> ;\n",
+      "    dcat:mediaType \"application/ld+json\" .\n",
+      "\n",
+      "<https://orcid.org/0000-0001-8729-0482> a foaf:Person ;\n",
+      "    foaf:name \"Probst, Matthias\" .\n",
+      "\n",
+      "<https://doi.org/10.5281/zenodo.395383> a dcat:Dataset ;\n",
+      "    dcterms:contributor <https://orcid.org/0000-0001-8729-0482> ;\n",
+      "    dcterms:creator <https://orcid.org/0000-0001-8729-0482> ;\n",
+      "    dcterms:description \"A toolbox for managing HDF5-based research data management\" ;\n",
+      "    dcterms:license <https://creativecommons.org/licenses/by/4.0/> ;\n",
+      "    dcterms:publisher \"Organization(id=https://www.wikidata.org/wiki/Q22661177, name=Zenodo, homepage=https://zenodo.org/)\" ;\n",
+      "    dcterms:title \"[deleteme]h5tbxZenodoInterface\" ;\n",
+      "    dcat:distribution <https://sandbox.zenodo.org/api/deposit/depositions/395383/files/26131c3d-7e76-4f2e-bda3-02af6cc5ee7c>,\n",
+      "        <https://sandbox.zenodo.org/api/deposit/depositions/395383/files/2fde3a21-ef6b-4c87-892d-8cf81f292992>,\n",
+      "        <https://sandbox.zenodo.org/api/deposit/depositions/395383/files/6753162b-948b-4111-8b47-b8bb00a0eff8> ;\n",
+      "    dcat:keyword \"hdf5\",\n",
+      "        \"rdm\",\n",
+      "        \"research data management\" ;\n",
+      "    dcat:version \"0.1.0-rc.1+build.1\" .\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset.serialize(\"ttl\"))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d8df017-3d3e-469f-84da-eb848c2592dc",
+   "id": "cfd84943-6dc3-47e3-a423-a5ea1a5d1e9e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -287,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
